Fix: reservation actions